02_code1/grade.txt
Grading at Fri May  8 09:33:21 UTC 2020
Checking code1.c for legal syntax
temp.c: In function ‘main’:
temp.c:18:65: error: overflow in implicit constant conversion [-Werror=overflow]
   printf("max(0x451215AF, 0x913591AFC) is %d\n",max(0x451215AF, 0x913591AFC));  
                                                                 ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
